fs모듈을 통한 회원가입 기능 구현

--- a/app/package.json
+++ b/app/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "push-node": "^2.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
